Refactored static map